# Deepbox

./: .gitignore  CMakeLists.txt  Deepbox.jucer  Info-AU.plist  LICENSE  README.md
.github/workflows/: ci.yml  cmake.yml  release.yml
Builds/MacOSX/: Info-Standalone_Plugin.plist
Builds/MacOSX/Deepbox.xcodeproj/: project.pbxproj
Builds/MacOSX/Deepbox.xcodeproj/xcshareddata/xcschemes/: Deepbox - VST3.xcscheme
Deepbox.xcodeproj/: project.pbxproj
Deepbox.xcodeproj/xcuserdata/eupston.xcuserdatad/xcschemes/: xcschememanagement.plist
Dependencies/essentia/: CMakeLists.txt
Dependencies/essentia/include/essentia/: version.h
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
ModelCreation/: CNNAudioClassifer.py  README.md  fdeepConvertModel.py  models.py  requirements.txt  utils.py
ModelCreation/models/: beatbox_model.h5  my_deepbox_model.h5  my_deepbox_model.json  my_deepbox_model_v2.h5  my_deepbox_model_v2.json  my_deepbox_model_v3.h5  my_deepbox_model_v4.h5  my_deepbox_model_v4.json
Modules/: CMakeLists.txt
Modules/OnsetClassification/: OnsetClassification.cpp  OnsetClassification.h
Modules/OnsetClassification/Source/: AudioFeatureExtraction.cpp  AudioFeatureExtraction.h  ShortTermFourierTransform.cpp  ShortTermFourierTransform.h
Plugin/: CMakeLists.txt
Plugin/Source/: AudioFeatureExtractor.cpp  AudioFeatureExtractor.hpp  AudioLiveScrollingDisplay.h  DragMidiFile.cpp  DragMidiFile.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Post_Build_Scripts/: embed_dylib_libraries.py
Resources/models/: beatbox_model.json
Source/: AudioFeatureExtractor.cpp  AudioFeatureExtractor.hpp  AudioLiveScrollingDisplay.h  DragMidiFile.cpp  DragMidiFile.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/BTrack/: BTrack.cpp  BTrack.h  OnsetDetectionFunction.cpp  OnsetDetectionFunction.h
Source/beat_detection/Source/Core/: OnsetClassification.cpp  OnsetClassification.h
Source/beat_detection/Source/GUI/: SettingsContentComponent.cpp
Source/beat_detection/Source/Wrappers/FFT/: ShortTermFourierTransform.h
Source/beat_detection/Source/Wrappers/SVM/: SVMTrain.h
Source/beat_surface/Source/Core/: AudioStream.cpp
Source/resources/models/: my_deepbox_model_v3.json  my_deepbox_model_v4.json
Xcode/MacOSX/: BinaryData.cpp  BinaryData.h  Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Xcode/MacOSX/Deepbox.xcodeproj/: project.pbxproj
Xcode/MacOSX/Deepbox.xcodeproj/xcshareddata/xcschemes/: Deepbox - AU.xcscheme  Deepbox - VST3.xcscheme
(+3 files in other folders)
